Add conversation images

--- a/index.html
+++ b/index.html
@@ -245,8 +245,11 @@
                         </li>
                     </ul>
                 </div>
-                <div class="hidden w-full mb-4 rounded-lg lg:mb-0 lg:flex image-sm ">
-                    <img src="./images/feature-1.png" alt="dashboard feature image">
+                <div class="hidden w-full mb-4 rounded-lg lg:mb-0 lg:flex">
+                    <img src="./images/conversa-lg.png" alt="dashboard feature image">
+                </div>
+                <div class="hidden image-sm">
+                    <img src="./images/conversa-sm.png" alt="dashboard feature image">
                 </div>
             </div>
             <!-- Row -->
