--- a/index.html
+++ b/index.html
@@ -245,11 +245,11 @@
                         </li>
                     </ul>
                 </div>
-                <div class="hidden w-full mb-4 rounded-lg lg:mb-0 lg:flex">
-                    <img src="./images/conversa-lg.png" alt="dashboard feature image">
+                <div class="hidden w-full mb-4 lg:mb-0 lg:flex">
+                    <img class="rounded-lg" src="./images/conversa-lg.png" alt="dashboard feature image">
                 </div>
                 <div class="hidden image-sm">
-                    <img src="./images/conversa-sm.png" alt="dashboard feature image">
+                    <img class="rounded" src="./images/conversa-sm.png" alt="dashboard feature image">
                 </div>
             </div>
             <!-- Row -->
@@ -290,7 +290,7 @@
                     </ul>
                 </div>
                 <div class="hidden image-sm ">
-                    <img src="./images/feature-1.png" alt="dashboard feature image">
+                    <img class="rounded" src="./images/feature-1.png" alt="dashboard feature image">
                 </div>
             </div>
             <!-- Row -->
@@ -329,13 +329,13 @@
                         </li>
                     </ul>
                 </div>
-                <div class="hidden w-full mb-4 rounded-lg lg:mb-0 lg:flex image-sm ">
-                    <img src="./images/feature-1.png" alt="dashboard feature image">
+                <div class="hidden w-full mb-4 lg:mb-0 lg:flex image-sm">
+                    <img class="rounded-lg" src="./images/impressao.gif" style="width: 90%;" alt="dashboard feature image">
                 </div>
             </div>
             <!-- Row -->
             <div class="items-center gap-8 lg:grid lg:grid-cols-2 xl:gap-16">
-                <img class="hidden w-full mb-4 rounded-lg lg:mb-0 lg:flex" src="./images/feature-2.png" alt="feature image 2">
+                <img class="hidden w-full mb-4 rounded-lg lg:mb-0 lg:flex" src="./images/produto.gif" style="width: 90%;" alt="feature image 2">
                 <div class="text-gray-500 sm:text-lg dark:text-gray-400">
                     <h2 class="mb-4 text-3xl font-extrabold tracking-tight text-gray-900 dark:text-white">
                         Produto Pronto: Garantia de Qualidade em Cada Detalhe
@@ -372,7 +372,7 @@
                 </div>
             </div>
             <div class="hidden image-sm ">
-                <img src="./images/feature-1.png" alt="dashboard feature image">
+                <img class="rounded" src="./images/produto.gif" style="width: 90%;" alt="dashboard feature image">
             </div>
         </div>
       </section>
