Adjust meta tags

--- a/index.html
+++ b/index.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
  <html lang="en">
 <head>
-    <link rel="canonical" href="https://eduardosm7.github.io/datiloprint-site" />
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://datiloprint.github.io/site" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DatiloPrint - Precisão em cada toque</title>
 
     <!-- Meta SEO -->
-    <meta name="title" content="DatiloPrint - Precisão Em Cada Toque">
+    <meta name="title" content="DatiloPrint - Precisão Em Cada Toque" />
     <meta name="description" content="DatiloPrint é mais do que uma empresade impressão 3D, é um estúdio onde cada criação carrega a marca de autenticidade e atenção ao detalhe.">
-    <meta name="robots" content="index, follow">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="language" content="Portuguese">
-    <meta name="author" content="DatiloPrint">
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="language" content="Portuguese" />
+    <meta name="author" content="DatiloPrint" />
 
     <!-- Social media share -->
-    <meta property="og:title" content=DatiloPrint - Precisão em cada toque>
-    <meta property="og:site_name" content=DatiloPrint>
-    <!-- TODO: Change -->
-    <meta property="og:url" content=https://eduardosm7.github.io/datiloprint-site/>
-    <meta property="og:description" content=DatiloPrint é mais do que uma empresade impressão 3D, é um estúdio onde cada criação carrega a marca de autenticidade e atenção ao detalhe.>
+    <meta property="og:title" content="DatiloPrint - Precisão em cada toque" />
+    <meta property="og:site_name" content="DatiloPrint" />
+    <meta property="og:url" content="https://datiloprint.github.io/site" />
+    <meta property="og:description" content="DatiloPrint é mais do que uma empresade impressão 3D, é um estúdio onde cada criação carrega a marca de autenticidade e atenção ao detalhe." />
     <meta property="og:type" content="website">
     <!-- TODO: Change -->
-    <meta property="og:image" content=https://eduardosm7.github.io/datiloprint-site/images/logo-share.png>
+    <meta property="og:image" content="https://datiloprint.github.io/site/images/logo-share.png" />
     <meta property="og:locale" content="pt_BR" />
     <!-- TODO: Change -->
     <!-- <meta name="twitter:card" content="summary" />
