Add modelling timelapse

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             </div>
             <!-- Row -->
             <div class="items-center gap-8 lg:grid lg:grid-cols-2 xl:gap-16">
-                <img class="hidden w-full mb-4 rounded-lg lg:mb-0 lg:flex" src="./images/feature-2.png" alt="feature image 2">
+                <img class="hidden w-full mb-4 rounded-lg lg:mb-0 lg:flex" src="./images/modelagem.gif" style="width: 90%;" alt="feature image 2">
                 <div class="text-gray-500 sm:text-lg dark:text-gray-400">
                     <h2 class="mb-4 text-3xl font-extrabold tracking-tight text-gray-900 dark:text-white">
                         Modelagem 3D: Precisão em Cada Detalhe
@@ -289,7 +289,8 @@
                     </ul>
                 </div>
                 <div class="hidden image-sm ">
-                    <img class="rounded" src="./images/feature-1.png" alt="dashboard feature image">
+                    <img class="rounded" src="./images/modelagem.gif" style="width: 90%;" alt="dashboard feature image">
+
                 </div>
             </div>
             <!-- Row -->
